# mandible2024

./: .gitignore  README.md  pyproject.toml  requirements.txt
dataset/annotations/: mandible measurement.xlsx
dataset/annotations2/: 0708439-2.tiff  1513314-2.tiff  mandible measurement.xlsx
dataset/predicted/: 0312829_prediction.tiff  0404134_prediction.tiff  0914213_prediction.tiff  1002001_prediction.tiff  1002147_prediction.tiff  (+11 more)
forvin/: excelformeasurement-Fang 08.29.xlsx
model_src/: yolov8sCLAHE_kim.ipynb  yolov8s_kim.ipynb  yolov8sroboflow_kim.ipynb  yolov8x_kim.ipynb
scripts/: apply_clahe.py  augmentation.py  check_empty.py  check_pair.py  class_num.py  count_file.py  delete_name.py  dim_avg.py  dotted_outline.py  final_run.py  get_segmentation_roi.py  getfiles.py  groundtruth.py  mask_pins.py  measure.py  overlay.py  padding.py  runmodel.py
src/: annotations_kim.ipynb  augment_kim.ipynb  convert_type_kim.ipynb  convertbox_kim.ipynb  dataprep_kim.ipynb  estimate_height_vin.ipynb  merge_kim.ipynb  perpendicular_vin.ipynb  runyolo_kim.ipynb  shortest_kim.ipynb  unetmodel_kim.ipynb  unetprep_kim.ipynb  visualize_kim.ipynb
src/vin/: README.md  measurement-2.ipynb  measurements.csv  pyproject.toml
src/vin/.ipynb_checkpoints/: measurement-2-checkpoint.ipynb
src/vin/src/: main.py  measure_order.py  utils.py
src/vin/src/pin_detection/: router.py  service.py
src/vin/styles/: styles.css
src/vin/templates/pin_detection_1/: index.html
src/vin/templates/pin_detection_2/: index.html
test/: color_edge.py  color_filter.py  edge.py
(+6421 files in other folders)
