[tool.poetry]
name = "mandible2024"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.12"
scikit-image = "^0.24.0"
pandas = "^2.2.2"
opencv-contrib-python = "^4.10.0.84"
jupyterlab = "^4.2.5"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
jupytext = "^1.16.4"
pynvim = "^0.5.0"
jupyter-client = "^8.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
