[tool.poetry]
name = "mandible-xray-project"
version = "0.1.0"
description = ""
authors = ["Vincent Yono <vincentyono@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.114.0"}
scikit-image = "^0.24.0"
jinja2 = "^3.1.4"
opencv-contrib-python = "^4.10.0.84"
numpy = "^2.1.1"
asyncio = "^3.4.3"
plotly = "^5.24.0"
imagecodecs = "^2024.6.1"
mdtex2html = "^1.3.0"
dash = "^2.18.1"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
